# market_simulation

./: .gitignore  CLAUDE.md  README.md  hf_trading_plan.md  new_features.md  package.json  plan.md  requirements.txt
.claude/: settings.local.json
backend/: pyproject.toml
backend/app/: main.py  models.py  schemas.py
backend/app/api/: __init__.py  analytics.py  deps.py  game.py  history.py  market.py  orders.py  portfolio.py
backend/app/core/: config.py  db.py  time_masking.py
backend/app/ingest/: fetch_mf_master.py  fetch_stocks.py  load_universe.py
backend/app/services/: benchmarks.py  charges.py  engine.py  mf_api.py  pricing.py  taxes.py
backend/app/services/algos/: __init__.py  base.py  live.py  registry.py  simulator.py  universe.py
backend/app/services/algos/strategies/: __init__.py  equal_weight_n50.py  low_vol.py  mean_reversion.py  momentum.py  quality.py  risk_parity.py  value.py
docs/: how_to_play.txt  how_to_save_tokens.txt  prompts.txt  refactor_algo.md  specs.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AlgoLeaderboardLive.tsx  AlgoStrategiesTab.tsx  CompositionPanel.tsx  MarketMascot.tsx  NavCurve.tsx  OrderDialog.tsx  PortfolioPanel.tsx  PriceChart.tsx  RiskDashboard.tsx  SectorPanel.tsx  TurnAnalytics.tsx  Tutorial.tsx  WatchlistTable.tsx
frontend/src/hooks/: useMascotState.ts
frontend/src/lib/: api.ts  format.ts
frontend/src/pages/: Game.tsx  History.tsx  Home.tsx  Results.tsx
