[project]
name = "market-simulation-backend"
version = "0.1.0"
description = "Turn-based Indian market simulation game — FastAPI backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "yfinance>=0.2.40",
    "httpx>=0.27",
    "pandas>=2.2",
    "python-dateutil>=2.9",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = ["ruff>=0.5", "pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"
